Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-09-17 (SVN):
    * in_dos.c (IN_Init): Make sure the command line switch actually has
      an argument. From Sander van Dijk.
    * in_svgalib.c (IN_InitMouse): Likewise.

2011-09-15 (SVN):
    * Bumped version date to 2011-09-15. Removed the beta status and
      marked as final.

2011-09-15 (SVN):
    * model.c, gl_model.c: Added new external_ents cvar in parallel to
      the old QIP code.

2011-09-15 (SVN):
    * gl_model.c (Mod_LoadLighting): Tidied up lit file loading code.

2011-09-15 (SVN):
    * Added gl_zfix as a new cvar to enable/disable the z-fighting fix
      on the fly. From Sander van Dijk.

2011-09-10 (SVN):
    * Bumped beta version date to 2011-09-10.

2011-09-10 (SVN):
    * host_string.c (Host_LoadStrings): Changed some console prints to
      developer mode only. Changed magic numbers 13 and 10 to '\r' and
      '\n'.
    * cl_parse.c (CL_ParseServerInfo): Changed server protocol console
      print to developer mode only.
    * cl_string.c (CL_LoadInfoStrings, CL_LoadPuzzleStrings):  Changed
      some console prints to developer mode only. Changed magic numbers
      13 and 10 to '\r' and '\n'.
    * gl_model.c (Mod_LoadLighting): Changed colored or white light load
      console prints to developer mode only.
    * pr_edict.c (PR_LoadProgs): Changed progs name and crc console print
      to developer mode only.

2011-09-10 (SVN):
    * Minor updates to COMPILE and TODO documents.

2011-08-21 (SVN):
    * snd_mp3.c (S_MP3_CodecOpenStream): Don't Z_Free() stream's private
      data when not allocating on the zone.

2011-08-13 (SVN):
    * r_shared.h: Moved to h2shared directory.  Used the hw version which
      defined NUMSTACKSURFACES as 1000 instead of 800.

2011-08-13 (SVN):
    * d_polyse.c: Moved to h2shared directory. Used the hexen2 version
      which has special treatments for initialleftheight==1 and height==1