@@ -1,5 +1,5 @@
 Hexen II: Hammer of Thyrion
-Version 1.5.0
+Version 1.5.1
 
 Instructions for Compiling:
 ===========================
