@@ -1,4 +1,4 @@
-Hexen II for DOS, version 1.5.0
+Hexen II for DOS, version 1.5.1
 
 DOS port of Hexen II, using the Hammer of Thyrion (uHexen2) engine
 http://uhexen2.sourceforge.net/
