@@ -13,8 +13,8 @@
 
 #define	HOT_VERSION_MAJ		1
 #define	HOT_VERSION_MID		5
-#define	HOT_VERSION_MIN		0
-#define	HOT_VERSION_REL_DATE	"2011-09-15"
+#define	HOT_VERSION_MIN		1
+#define	HOT_VERSION_REL_DATE	"2011-09-22"
 #define	HOT_VERSION_BETA	0
 #define	HOT_VERSION_BETA_STR	"final"
 #define	HOT_VERSION_STR		STRINGIFY(HOT_VERSION_MAJ) "." STRINGIFY(HOT_VERSION_MID) "." STRINGIFY(HOT_VERSION_MIN)
