@@ -3,7 +3,11 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
-2011-09-17 (SVN):
+2011-09-22 (SVN):
+    * quakedef.h: Bumped version to 1.5.1 in the development tree.
+    * docs: Changed version to read 1.5.1.
+
+2011-09-17 (1.5.0-final / SVN):
     * in_dos.c (IN_Init): Make sure the command line switch actually has
       an argument. From Sander van Dijk.
     * in_svgalib.c (IN_InitMouse): Likewise.
